fix: center alignment for description

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -165,6 +165,7 @@
   justify-content: center;
   min-height: 29px;
   color: white;
+  text-align: center;
   font-family: 'Trebuchet MS', sans-serif;
   line-height: 110%;
   font-weight: 400;
